tests/NormalTests/paczka1/fuzzy1/43974338.err
Error in line 17: lSqS6WnE S552 -3,8
Error in line 21: ri8VDh60 S552 29,5
Error in line 14: lSqS6WnE S552 37,1
Error in line 24: lSqS6WnE A123 0,0
Error in line 18: iHC5PcFuQao A89 8,1
Error in line 27: iHC5PcFuQao A429 94,2
